tests/fixtures/invalid/logical_type_wrong_base.avsc
{
  "type": "record",
  "name": "InvalidLogicalType",
  "fields": [
    {
      "name": "bad_uuid",
      "type": {
        "type": "int",
        "logicalType": "uuid"
      }
    }
  ]
}
